--- a/client/src/components/views/Footer/Footer.css
+++ b/client/src/components/views/Footer/Footer.css
@@ -1,10 +1,15 @@
 .footer{
-    position: fixed;
-    bottom: 0;
     width: 100%;
     padding: 0.8rem;
     margin: 0 auto;
     text-align: center;
-    background-color: white;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.1);
+    background-color: #6495ED;
+    color: white;
+    box-shadow: 0 0 8px 1px rgba(17, 17, 17, 0.2);
+}
+
+.footer.fixed{
+    position: fixed;
+    bottom: 0;
+    z-index: 10;
 }
