--- a/client/src/components/views/LandingPage/LandingPage.css
+++ b/client/src/components/views/LandingPage/LandingPage.css
@@ -1,4 +1,6 @@
 .ladingPage{
+    display: flex;
+    justify-content: space-between;
     max-width: 1280px;
     margin: 0 auto;
     padding: 1rem;
