--- a/client/src/components/views/PostPage/CreatePage.css
+++ b/client/src/components/views/PostPage/CreatePage.css
@@ -8,7 +8,7 @@
     appearance: none;
     width: 100%;
     padding: 1rem;
-    margin-bottom: 1rem;
+    margin: 0.8rem 0 1rem;
     border: 1px solid lightgray;
     border-radius: 0.2rem;
     font-size: 20px;
