--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,7 @@ a{
 }
 
 body{
+    min-height: 100vh;
     font-size: 14px;
     font-family: 'Mulish', 'Malgun Gothic', sans-serif;
     color: #4F5A6E;
