--- a/client/src/components/views/PostPage/CreatePage.css
+++ b/client/src/components/views/PostPage/CreatePage.css
@@ -22,7 +22,7 @@
 .post-create .info{
     display: flex;
     display: -ms-flexbox;
-    justify-content: space-between;
+    justify-content: flex-end;
     width: 100%;
     padding: 1rem;
     margin-top: 1rem;
