--- a/client/src/components/views/BlogPage/BlogPage.css
+++ b/client/src/components/views/BlogPage/BlogPage.css
@@ -1,3 +1,13 @@
+.show-list{
+    width: 100%;
+}
+
+.show-list > h2{
+    font-size: 24px;
+    margin: 2rem 0;
+    color: #444;
+}
+
 .blog-page{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -5,23 +15,26 @@
     row-gap: 1rem;
 }
 
+.blog-page h3{
+    font-size: 18px;
+}
+
 .blog-page .post{
     position: relative;
-    height: 320px;
+    height: 420px;
     background-color: white;
-    box-shadow: 0 0 8px 1px rgba(17, 17, 17, 0.1);
+    box-shadow: 0 0 8px 0px rgba(17, 17, 17, 0.1);
     border-radius: 0.2rem;
     overflow: hidden;
     transition: 0.3s ease-in-out;
 }
 
-.blog-page .post:hover,
-.blog-page-paging .btn:hover{
-    box-shadow: 0 0 16px 1px rgba(17, 17, 17, 0.4);
+.blog-page .post:hover{
+    box-shadow: 0 0 48px 0px rgba(17, 17, 17, 0.3);
 }
 
 .blog-page .post .title{
-    padding: 1rem 1rem 0.5rem;
+    padding: 1.5rem 1rem 0.8rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -44,6 +57,21 @@
     -webkit-box-orient: vertical;
 }
 
+.blog-page .post .info{
+    display: flex;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 0.5rem 1rem 1rem;
+    font-size: 12px;
+}
+
+.blog-page .post .info span{
+    margin-left: 0.5rem;
+    color: #6F7787;
+}
+
 /* .blog-page .post .title,
 .blog-page .post .content{
 
@@ -55,6 +83,7 @@
     justify-content: center;
     width: 100%;
     height: 60%;
+    object-fit: cover;
     background: lightgray;
     /* filter: brightness(0.1); */
 }
@@ -62,13 +91,20 @@
 .blog-page-paging{
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
+    margin-top: 3rem;
 }
 
 .blog-page-paging .btn{
-    padding: 0.5rem;
+    padding: 0.35rem 0.5rem;
+    margin: 0 0.2rem;
     background: white;
+    border: 1px solid lightgray;
     border-radius: 0.2rem;
-    box-shadow: 0 0 8px 1px rgba(17, 17, 17, 0.1);
+    box-shadow: 0 0 4px 0px rgba(17, 17, 17, 0.1);
+    font-size: 12px;
     transition: 0.3s ease-in-out;
+}
+
+.blog-page-paging .btn:hover{
+    box-shadow: 0 0 8px 0px rgba(17, 17, 17, 0.3);
 }
