--- a/client/src/components/views/Aside/Aside.css
+++ b/client/src/components/views/Aside/Aside.css
@@ -5,6 +5,11 @@
     margin-right: 1rem;
 }
 
+.aside a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .aside .category-list{
     position: fixed;
     min-width: 240px;
