--- a/client/src/components/views/BlogPage/BlogPage.css
+++ b/client/src/components/views/BlogPage/BlogPage.css
@@ -2,6 +2,11 @@
     width: 100%;
 }
 
+.show-list a{
+    color: inherit;
+    text-decoration: none;
+}
+
 .show-list > h2{
     font-size: 24px;
     margin: 2rem 0;
