--- a/client/src/components/views/BlogPage/PostPage/PostPage.css
+++ b/client/src/components/views/BlogPage/PostPage/PostPage.css
@@ -41,6 +41,22 @@
     background-color: white;
 }
 
+.post-page main a{
+    color: #4F5A6E;
+    text-decoration: underline;
+    font-weight: 600;
+    transition: 0.3s ease-in-out;
+}
+
+.post-page main a:hover{
+    color: #EBC063
+}
+
+.post-page main .content{
+    font-size: 16px;
+    line-height: 2.0;
+}
+
 .post-page main .function{
     display: flex;
     justify-content: space-between;
@@ -50,8 +66,13 @@
     width: 100%;
     padding: 0 1rem;
     margin-top: 1rem;
-    font-size: 11px;
-    color: #444;
+    font-size: 14px;
+    color: white;
+}
+
+.post-page main .function a{
+    color: inherit;
+    text-decoration: none;
 }
 
 .post-page main .function .tag{
@@ -59,20 +80,12 @@
 }
 
 .post-page main .function .tag a{
-    color: inherit;
-    text-decoration: none;
-}
-
-.post-page main .function .tag a:first-child{
-    font-size: 12px;
-    margin-right: 0.5rem;
-}
-
-.post-page main .function .tag a:nth-child(n + 2){
-    /* display: block; */
     padding: 0.3rem;
-    background: lightgray;
+    background: #eee;
     border-radius: 0.2rem;
+    font-size: 13px;
+    font-weight: 400;
+    color: #282E38;
 }
 
 .post-page main .function .post.disable{
@@ -81,4 +94,5 @@
 
 .post-page main .function .post .button{
     margin-left: 0.5rem;
+    font-weight: 400;
 }
