--- a/client/src/components/views/Footer/Footer.css
+++ b/client/src/components/views/Footer/Footer.css
@@ -1,16 +1,12 @@
 .footer{
     width: 100%;
     padding: 0.8rem;
-    margin-top: 128px;
+    margin-top: 80px;
     text-align: center;
     color: white;
     font-size: 12px;
     background-color: #6495ED;
-}
-
-.footer a{
-    color: inherit;
-    text-decoration: none;
+    box-shadow: 0 0 8px 0 rgba(17,17,17,0.1);
 }
 
 .footer .inner{
@@ -50,15 +46,15 @@
 /*
 radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 */
-/* 
-.footer .insta-icon:hover{
 
-}
-
-.footer .youtube-icon:hover{
-
-}
-
+/* .footer .insta-icon,
+.footer .youtube-icon:hover,
 .footer .github-icon{
+    transition: 0.3s ease-in-out;
+}
 
+.footer .insta-icon:hover,
+.footer .youtube-icon:hover,
+.footer .github-icon:hover{
+    color: #EBC063;
 } */
