--- a/client/src/components/views/Footer/Footer.css
+++ b/client/src/components/views/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer{
     width: 100%;
     padding: 0.8rem;
-    margin-top: 80px;
+    margin-top: 6rem;
     text-align: center;
     color: white;
     font-size: 12px;
