--- a/client/src/components/views/LoginPage/LoginPage.css
+++ b/client/src/components/views/LoginPage/LoginPage.css
@@ -18,7 +18,6 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin-bottom: 0.5rem;
     border-radius: 0.2rem;
 }
 
@@ -87,11 +86,11 @@
 }
 
 .login-container .checkbox .checkbox-box{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
-    align-items: baseline;
     width: 1.1rem;
     height: 1.1rem;
     margin-right: 0.5rem;
@@ -103,8 +102,11 @@
 
 .login-container .checkbox .checkbox-box::after{
     content: '\2714';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 13px;
     color: white;
-    margin-top: -0.1rem;
 }
 
 .login-container .checkbox .input:checked + .checkbox-box{
